bk_ida/gobmkida/g3/transformation_init
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:605:6: error: use of undeclared identifier 'spiral'
v1 = spiral; 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:607:58: error: use of undeclared identifier 'xmmword_5196C0'
v72 = _mm_srli_epi64( _mm_load_si128( ( const __m128i *)&xmmword_5196C0), 0x20u); 
                                                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:608:58: error: use of undeclared identifier 'xmmword_5196D0'
v73 = _mm_srli_epi64( _mm_load_si128( ( const __m128i *)&xmmword_5196D0), 0x20u); 
                                                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:609:58: error: use of undeclared identifier 'xmmword_5196E0'
v74 = _mm_srli_epi64( _mm_load_si128( ( const __m128i *)&xmmword_5196E0), 0x20u); 
                                                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:610:58: error: use of undeclared identifier 'xmmword_5196F0'
v75 = _mm_srli_epi64( _mm_load_si128( ( const __m128i *)&xmmword_5196F0), 0x20u); 
                                                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:611:58: error: use of undeclared identifier 'xmmword_519700'
v76 = _mm_srli_epi64( _mm_load_si128( ( const __m128i *)&xmmword_519700), 0x20u); 
                                                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:612:58: error: use of undeclared identifier 'xmmword_519710'
v77 = _mm_srli_epi64( _mm_load_si128( ( const __m128i *)&xmmword_519710), 0x20u); 
                                                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:613:58: error: use of undeclared identifier 'xmmword_519720'
v78 = _mm_srli_epi64( _mm_load_si128( ( const __m128i *)&xmmword_519720), 0x20u); 
                                                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:614:58: error: use of undeclared identifier 'xmmword_519730'
v79 = _mm_srli_epi64( _mm_load_si128( ( const __m128i *)&xmmword_519730), 0x20u); 
                                                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:615:61: error: use of undeclared identifier 'xmmword_519740'
v80[0] = _mm_srli_epi64( _mm_load_si128( ( const __m128i *)&xmmword_519740), 0x20u); 
                                                            ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:633:50: error: use of undeclared identifier 'xmmword_5196C0'
_mm_shuffle_epi32( _mm_mul_epu32( v10, ( __m128i)xmmword_5196C0), 8), 
                                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:641:50: error: use of undeclared identifier 'xmmword_5196C0'
_mm_shuffle_epi32( _mm_mul_epu32( v13, ( __m128i)xmmword_5196C0), 8), 
                                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:644:50: error: use of undeclared identifier 'xmmword_5196D0'
_mm_shuffle_epi32( _mm_mul_epu32( v10, ( __m128i)xmmword_5196D0), 8), 
                                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:650:50: error: use of undeclared identifier 'xmmword_5196D0'
_mm_shuffle_epi32( _mm_mul_epu32( v13, ( __m128i)xmmword_5196D0), 8), 
                                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:653:50: error: use of undeclared identifier 'xmmword_5196E0'
_mm_shuffle_epi32( _mm_mul_epu32( v10, ( __m128i)xmmword_5196E0), 8), 
                                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:656:50: error: use of undeclared identifier 'xmmword_5196E0'
_mm_shuffle_epi32( _mm_mul_epu32( v13, ( __m128i)xmmword_5196E0), 8), 
                                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:659:50: error: use of undeclared identifier 'xmmword_5196F0'
_mm_shuffle_epi32( _mm_mul_epu32( v10, ( __m128i)xmmword_5196F0), 8), 
                                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:663:50: error: use of undeclared identifier 'xmmword_5196F0'
_mm_shuffle_epi32( _mm_mul_epu32( v13, ( __m128i)xmmword_5196F0), 8), 
                                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:666:50: error: use of undeclared identifier 'xmmword_519700'
_mm_shuffle_epi32( _mm_mul_epu32( v10, ( __m128i)xmmword_519700), 8), 
                                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:669:50: error: use of undeclared identifier 'xmmword_519700'
_mm_shuffle_epi32( _mm_mul_epu32( v13, ( __m128i)xmmword_519700), 8), 
                                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:672:50: error: use of undeclared identifier 'xmmword_519710'
_mm_shuffle_epi32( _mm_mul_epu32( v10, ( __m128i)xmmword_519710), 8), 
                                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:675:50: error: use of undeclared identifier 'xmmword_519710'
_mm_shuffle_epi32( _mm_mul_epu32( v13, ( __m128i)xmmword_519710), 8), 
                                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:678:50: error: use of undeclared identifier 'xmmword_519720'
_mm_shuffle_epi32( _mm_mul_epu32( v10, ( __m128i)xmmword_519720), 8), 
                                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:682:50: error: use of undeclared identifier 'xmmword_519720'
_mm_shuffle_epi32( _mm_mul_epu32( v13, ( __m128i)xmmword_519720), 8), 
                                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:685:50: error: use of undeclared identifier 'xmmword_519730'
_mm_shuffle_epi32( _mm_mul_epu32( v10, ( __m128i)xmmword_519730), 8), 
                                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:688:50: error: use of undeclared identifier 'xmmword_519730'
_mm_shuffle_epi32( _mm_mul_epu32( v13, ( __m128i)xmmword_519730), 8), 
                                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:693:50: error: use of undeclared identifier 'xmmword_519740'
_mm_shuffle_epi32( _mm_mul_epu32( v10, ( __m128i)xmmword_519740), 8), 
                                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/patterns/transform.c:696:50: error: use of undeclared identifier 'xmmword_519740'
_mm_shuffle_epi32( _mm_mul_epu32( v13, ( __m128i)xmmword_519740), 8), 
                                                 ^
28 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/transformation_init/src/obj/3/transform.o] Error 1
